--- a/rufangrongke/rufangrongke/Classes/main/Controller/WXZFindPasswordController.xib
+++ b/rufangrongke/rufangrongke/Classes/main/Controller/WXZFindPasswordController.xib
@@ -45,6 +45,9 @@
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                             <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                            <connections>
+                                <outlet property="delegate" destination="-1" id="6FN-vb-rq1"/>
+                            </connections>
                         </textField>
                     </subviews>
                     <constraints>
@@ -97,6 +100,9 @@
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                             <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                            <connections>
+                                <outlet property="delegate" destination="-1" id="RS8-Wa-m3s"/>
+                            </connections>
                         </textField>
                     </subviews>
                     <constraints>
@@ -151,6 +157,9 @@
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                             <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                            <connections>
+                                <outlet property="delegate" destination="-1" id="aJG-dq-bIs"/>
+                            </connections>
                         </textField>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eU2-pd-wYJ" userLabel="眼睛">
                             <rect key="frame" x="555" y="7" width="30" height="30"/>
